HelpMePlay | 1.0.7
	Features:
		- Added support for suggesting which talents to purchase from the Box of Many Things in Torghast.
		- Added support for suggesting talents (while leveling) for every specialization.
	Changes:
		- Active (and complete) and available quests should be prioritized over selecting dialogs.
	Dialog:
		- Added more stable masters.
		- Added more NPCs involved in various Shadowlands campaigns.
		- Added more NPCs from Torghast.
		- Added various NPCs from the world (outside Shadowlands.)
	Quests:
		- Added Torghast as the first "zone" selection for Shadowlands.
			Dev Note: If "Adventure Maps" is enabled, then the order is now Torghast -> Bastion -> Maldraxxus -> Ardenweald -> Revendreth. Disable the setting to select your own order.
	Torghast:
		- Anima Powers across all tiers are now auto selected for the Hunter, Paladin, and Warrior classes.
	Notes:
		- Added a note to the Levers for the Lever-Locked Chest in Torghast to identify a quick order to solve the puzzle.
	Merchants:
		- Added the Anima Supricifer from Ve'nari.