@@ -2,6 +2,7 @@ HelpMePlay | 1.0.7
 	Features:
 		- Added support for suggesting which talents to purchase from the Box of Many Things in Torghast.
 		- Added support for suggesting talents (while leveling) for every specialization.
+		- Added a minimap button! Enable and disable it using the settings.
 	Changes:
 		- Active (and complete) and available quests should be prioritized over selecting dialogs.
 	Dialog:
